crates/service/tests/diagnostics/snapshots/features__diagnostics__useless_catch__after_catch.snap
---
source: crates/service/tests/diagnostics/useless_catch.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 28
        },
        "end": {
          "line": 5,
          "character": 40
        }
      },
      "severity": 2,
      "code": "useless-catch",
      "source": "wat",
      "message": "this catch clause will never be matched",
      "tags": [
        1
      ],
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 16
              },
              "end": {
                "line": 5,
                "character": 27
              }
            }
          },
          "message": "catch clause already matched here"
        }
      ]
    }
  ]
}
